Added english description of algorithms

--- a/bg/index_bg.html
+++ b/bg/index_bg.html
@@ -12,7 +12,7 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="../../index.html">Начало</a></li>
+                    <li><a href="./index_bg.html">Начало</a></li>
                     <li><a href="./sorting_bg/bubble_bg.html">Алгоритми за сортиране</a></li>
                     <li><a href="./searching_bg/binary_bg.html">Алгоритми за търсене</a></li>
                 </ul>
