--- a/bg/searching_bg/binary_bg.html
+++ b/bg/searching_bg/binary_bg.html
@@ -128,7 +128,10 @@ int binarySearch(int arr[], int l, int r, int x)
 }
         </div>
         <div class="flex-item-right">
-            При двоичното търсене масивът първо трябва да бъде сортиран. Двоичното търсене започва търсенето си от средата на масива, като се сравнява стойността на търсения елемент и стойността на елемента в средата на масива. Ако търсената стойност е по-голяма от средния елемент, то търсенето продължава в дясната част на масива, като отново масива се дели наполовина. Ако търсената стойност е по-малка от средния елемент, то търсенето продължава в лявата част на масива. Тези действия се повтарят, докато търсеният елемент не бъде намерен. Средната скорост на двоичното търсене е O(log n). В най-добрия случай скоростта е O(1), а в най-лошия случай скоростта е O(log n).
+            При двоичното търсене масивът първо трябва да бъде сортиран. Двоичното търсене започва търсенето си от средата на масива, като се сравнява стойността на търсения елемент и стойността на елемента в средата на масива. Ако търсената стойност е по-голяма от средния елемент, то търсенето продължава в дясната част на масива, като отново масива се дели наполовина. Ако търсената стойност е по-малка от средния елемент, то търсенето продължава в лявата част на масива. Тези действия се повтарят, докато търсеният елемент не бъде намерен.
+            <div>
+                Средната скорост на двоичното търсене е O(log n). В най-добрия случай скоростта е O(1), а в най-лошия случай скоростта е O(log n).
+            </div>
         </div>
     </div>
     <div id="myModal" class="modal">
