--- a/bg/searching_bg/ternary_bg.html
+++ b/bg/searching_bg/ternary_bg.html
@@ -166,7 +166,10 @@ int ternarySearch(int l, int r, int key, int ar[])
 }
         </div>
         <div class="flex-item-right">
-            При тристранното търсене масивът първо трябва да бъде сортиран. При тристранното търсене масивът е разделен на три части, като за да изчислим индекса на лявата част можем да използваме формулата mid1 = l + (r-l)/3, формулата за дясната част е mid2 = r – (r-l)/3. Първото действие на тристранното търсене е да провери дали търсеният елемент не съвпада с mid1, след това проверява и mid2. Ако търсеният елемент е по-малък от mid1 търсенето продължава в ляво от mid1, като се преизчисляват mid1 и mid2. Ако търсеният елемент е по-голям от mid2 търсенето продължава в дясно от mid2, като се преизчисляват mid1 и mid2. Ако търсеният елемент е по-голям от mid1 и по-малък от mid2, то търсеният елемент е между mid1 и mid2. Скоростта на тристранното търсене е O(log3 n).
+            При тристранното търсене масивът първо трябва да бъде сортиран. При тристранното търсене масивът е разделен на три части, като за да изчислим индекса на лявата част можем да използваме формулата mid1 = l + (r-l)/3, формулата за дясната част е mid2 = r – (r-l)/3. Първото действие на тристранното търсене е да провери дали търсеният елемент не съвпада с mid1, след това проверява и mid2. Ако търсеният елемент е по-малък от mid1 търсенето продължава в ляво от mid1, като се преизчисляват mid1 и mid2. Ако търсеният елемент е по-голям от mid2 търсенето продължава в дясно от mid2, като се преизчисляват mid1 и mid2. Ако търсеният елемент е по-голям от mid1 и по-малък от mid2, то търсеният елемент е между mid1 и mid2.
+            <div>
+                Скоростта на тристранното търсене е O(log3 n).
+            </div>
         </div>
     </div>
 
