--- a/bg/sorting_bg/insertion_bg.html
+++ b/bg/sorting_bg/insertion_bg.html
@@ -126,7 +126,10 @@ void insertionSort(int arr[], int n)
 }
         </div>
         <div class="flex-item-right">
-            Началният масив се разделя на два подмасива – сортиран подмасив и подмасив с оставащите елементи. Когато сортирането чрез вмъкване започне своята работа, той взима първия елемент от несортирания подмасив и чрез сравнения поставя елемента в подмасива за сортирани елементи. Сортирането продължава, докато елементите от несортирания подмасив не се изчерпат. В най-добрия случай масивът е почти сортиран, тогава скоростта му е O(n). Пример за най-лош случай е когато масивът е напълно обърнат на обратно. Това дава на сортирането чрез вмъкване скорост от O(n2). Средният случай също е O(n2).
+            Началният масив се разделя на два подмасива – сортиран подмасив и подмасив с оставащите елементи. Когато сортирането чрез вмъкване започне своята работа, той взима първия елемент от несортирания подмасив и чрез сравнения поставя елемента в подмасива за сортирани елементи. Сортирането продължава, докато елементите от несортирания подмасив не се изчерпат.
+            <div>
+                В най-добрия случай масивът е почти сортиран, тогава скоростта му е O(n). Пример за най-лош случай е когато масивът е напълно обърнат на обратно. Това дава на сортирането чрез вмъкване скорост от O(n2). Средният случай също е O(n2).
+            </div>
         </div>
     </div>
     <!-- <script>
