--- a/eg/sorting_eg/bubble_eg.html
+++ b/eg/sorting_eg/bubble_eg.html
@@ -110,14 +110,12 @@ void bubbleSort(int arr[], int n)
 }
         </div>
         <div class="flex-item-right">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt harum ipsum aliquid doloremque dicta, fugit facere vitae tempora cupiditate alias eos quisquam accusantium recusandae illo vel quod, adipisci facilis voluptatum!
+            Bubble Sort is the simplest sorting algorithm that works by repeatedly swapping the adjacent elements if they are in the wrong order. Starting from the first index, compare the first and the second elements. If the first element is greater than the second element, they are swapped. Now, compare the second and the third elements. Swap them if they are not in order. The above process goes on until the last element.
+            <div>
+                Best time complexity - O(n). Worst time complexity - O(n2). Average time complexity - O(n2).
+            </div>
         </div>
     </div>
-    <!-- <script>
-        function rangeFunction() {
-	generatearray();
-}
-    </script> -->
 </body>
 <script src="../../script.js"></script>
 </html>
