--- a/eg/sorting_eg/counting_eg.html
+++ b/eg/sorting_eg/counting_eg.html
@@ -157,7 +157,10 @@ void countSort(vector<int>& arr)
 }
         </div>
         <div class="flex-item-right">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate nesciunt quas ex. Ipsum asperiores sunt expedita laboriosam omnis. Sit sapiente temporibus reprehenderit voluptate nam id ducimus numquam animi iste nostrum.
+            Counting sort is a sorting algorithm that sorts the elements of an array by counting the number of occurrences of each unique element in the array. The count is stored in an auxiliary array and the sorting is done by mapping the count as an index of the auxiliary array.
+            <div>
+                In all cases the time complexity is O(n+k).
+            </div>
         </div>
     </div>
 </body>
