--- a/eg/sorting_eg/insertion_eg.html
+++ b/eg/sorting_eg/insertion_eg.html
@@ -125,14 +125,12 @@ void insertionSort(int arr[], int n)
 }
         </div>
         <div class="flex-item-right">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta tenetur vel iure ipsa labore earum hic quos possimus necessitatibus suscipit consequuntur, qui ex aspernatur doloremque nobis! Nemo dolorum cum delectus.
+            The array is split into a sorted and an unsorted part. Values from the unsorted part are picked and placed at the correct position in the sorted part.
+            <div>
+                Best time complexity O(n). Worst time complexity O(n2). Average time complexity O(n2).
+            </div>
         </div>
     </div>
-    <!-- <script>
-        function rangeFunction() {
-	generatearray();
-}
-    </script> -->
 </body>
 <script src="../../script.js"></script>
 </html>
