--- a/eg/sorting_eg/merge_eg.html
+++ b/eg/sorting_eg/merge_eg.html
@@ -263,7 +263,10 @@ void mergeSort(int array[], int const begin,
 }
         </div>
         <div class="flex-item-right">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. In nemo nisi similique iusto a, eos saepe est expedita voluptatum molestiae explicabo voluptatibus nesciunt soluta necessitatibus sint repellendus fugiat facilis possimus!
+            Merge Sort is based on the principle of Divide and Conquer Algorithm. A divide and conquer algorithm is a strategy of solving a large problem by breaking the problem into smaller sub-problems, solving the sub-problems and combining them to get the desired output. The Merge Sort function repeatedly divides the array into two halves until we reach a stage where we try to perform Merge Sort on a subarray of size 1. After that, the merge function combines the sorted arrays into larger arrays until the whole array is merged.
+            <div>
+                In all cases Merge Sort has time compelexity of O(n*log n).
+            </div>
         </div>
     </div>
 </body>
