--- a/eg/sorting_eg/quick_eg.html
+++ b/eg/sorting_eg/quick_eg.html
@@ -199,7 +199,10 @@ void quickSort(int arr[], int low, int high)
 }
         </div>
         <div class="flex-item-right">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid accusamus ea error dolorum consectetur laudantium sapiente dignissimos nihil placeat, est beatae reiciendis tempore voluptatibus voluptas magni repudiandae autem laborum ex!
+            Quick Sort picks an element as pivot and partitions the given array around the picked pivot. There are many different versions of Quick Sort that pick pivot in different ways. Pick first element as pivot. Pick last element as pivot. Pick median element as pivot. It works by selecting a 'pivot' element from the array and partitioning the other elements into two sub-arrays, according to whether they are less than or greater than the pivot. The left and right subarrays are also divided using the same approach. This process continues until each subarray contains a single element. At this point, elements are already sorted. Finally, elements are combined to form a sorted array.
+            <div>
+                Best time complexity - O(n*log n). Worst time complexity - O(n2). Average time complexity - O(n*log n)
+            </div>
         </div>
     </div>
 </body>
