--- a/eg/sorting_eg/selection_eg.html
+++ b/eg/sorting_eg/selection_eg.html
@@ -131,7 +131,10 @@ void selectionSort(int arr[], int n)
 } 
         </div>
         <div class="flex-item-right">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, nemo? Maiores, possimus? Sunt aspernatur autem, aut cum inventore quo? Hic dolore id, nesciunt quibusdam porro culpa praesentium. Soluta, ipsam obcaecati.
+            Selection sort is a sorting algorithm that selects the smallest element from an unsorted list in each iteration and places that element at the beginning of the unsorted list.
+            <div>
+                In all cases Selection Sort has time compelexity of O(n2).
+            </div>
         </div>
     </div>
 </body>
