--- a/eg/sorting_eg/shell_eg.html
+++ b/eg/sorting_eg/shell_eg.html
@@ -137,13 +137,13 @@ int shellSort(int arr[], int n)
     return 0;
 }
         </div>
-        <div class="flex-item-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, voluptatem. Autem nobis inventore tempora, voluptatum accusamus quam molestiae delectus similique quasi facilis natus eaque. Magni accusamus rerum est deleniti ad!</div>
+        <div class="flex-item-right">
+            It first sorts elements that are far apart from each other and successively reduces the interval between the elements to be sorted.
+            <div>
+                The complexity depends on the interval chosen.
+            </div>
+        </div>
     </div>
-    <!-- <script>
-        function rangeFunction() {
-	generatearray();
-}
-    </script> -->
 </body>
 <script src="../../script.js"></script>
 </html>
