--- a/bg/searching_bg/jump_bg.html
+++ b/bg/searching_bg/jump_bg.html
@@ -168,7 +168,10 @@ int jumpSearch(int arr[], int x, int n)
 }
         </div>
         <div class="flex-item-right">
-            При търсенето със скоци масивът трябва да бъде предварително сортиран. Алгоритъмът работи по следния начин: изчислява се големината на „скока“ (корен от дължината на масива), когато големината на „скока“ се изчисли, алгоритъмът започва от началото на масива, след това се прави „скок“, ако елементът, който е търсен бъде задминат от „скока“, то се започва линейно търсене, докато не бъде намерен търсеният елемент. Големината на „скока“ се изчислява в началото и си остава с константна стойност. Скоростта на търсенето със скоци се измерва в O(√n).
+            При търсенето със скоци масивът трябва да бъде предварително сортиран. Алгоритъмът работи по следния начин: изчислява се големината на „скока“ (корен от дължината на масива), когато големината на „скока“ се изчисли, алгоритъмът започва от началото на масива, след това се прави „скок“, ако елементът, който е търсен бъде задминат от „скока“, то се започва линейно търсене, докато не бъде намерен търсеният елемент. Големината на „скока“ се изчислява в началото и си остава с константна стойност.
+            <div>
+                Скоростта на търсенето със скоци се измерва в O(√n).
+            </div>
         </div>
     </div>
 
