--- a/bg/sorting_bg/merge_bg.html
+++ b/bg/sorting_bg/merge_bg.html
@@ -263,7 +263,10 @@ int const end)
 }
         </div>
         <div class="flex-item-right">
-            Делим масива на две части (подмасиви). Така същото действие се повтаря за всеки подмасив, докато не останат подмасиви само с един елемент. При достигане на всички подмасиви с един елемент, започваме да ги обединяваме. Когато те се обединяват елементите се сортират в правилния им ред. Когато подмасив се разделя и броят елементи на масива е четен, ние делим масива на две равни части. Когато масивът има нечетен брой елементи, делим масива на две части, като десният подмасив има един елемент повече. При най-лош, най-добър и среден случай винаги скоростта на сортирането чрез сливане е O(n*log n).
+            Делим масива на две части (подмасиви). Така същото действие се повтаря за всеки подмасив, докато не останат подмасиви само с един елемент. При достигане на всички подмасиви с един елемент, започваме да ги обединяваме. Когато те се обединяват елементите се сортират в правилния им ред. Когато подмасив се разделя и броят елементи на масива е четен, ние делим масива на две равни части. Когато масивът има нечетен брой елементи, делим масива на две части, като десният подмасив има един елемент повече.
+            <div>
+                При най-лош, най-добър и среден случай винаги скоростта на сортирането чрез сливане е O(n*log n).
+            </div>
         </div>
     </div>
 </body>
