--- a/eg/sorting_eg/cocktail_eg.html
+++ b/eg/sorting_eg/cocktail_eg.html
@@ -191,7 +191,10 @@ void CocktailSort(int a[], int n)
 }
         </div>
         <div class="flex-item-right">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae velit praesentium cupiditate facilis dolore? Fugit omnis dicta porro commodi beatae vel tempora, quasi quia perferendis laborum maxime illum, labore quidem?
+            Each iteration of the algorithm is broken up into 2 stages. The first stage loops through the array from left to right, just like the Bubble Sort. During the loop, adjacent items are compared and if value on the left is greater than the value on the right, then values are swapped. At the end of first iteration, largest number will reside at the end of the array. The second stage loops through the array in opposite direction- starting from the item just before the most recently sorted item, and moving back to the start of the array. Adjacent items are compared and are swapped if required. 
+            <div>
+                Best time complexity - O(n). Worst time complexity - O(n2). Average time complexity - O(n2).
+            </div>
         </div>
     </div>
 </body>
